hphp/test/zend/good/ext/standard/tests/strings/money_format_variation1.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!function_exists('money_format')) {
  die("SKIP money_format - not supported\n");
}
}
